# timer

./: .gitignore  CMakeLists.txt
include/: persist.hpp  project.hpp  task.hpp  tasktimer.hpp  timer.hpp  timingresult.hpp  work_interval.hpp
src/: main.cpp  persist.cpp  project.cpp  task.cpp  tasktimer.cpp  timer.cpp  timingresult.cpp  work_interval.cpp
