cmake_minimum_required(VERSION 3.5.1)
project(timer)
add_definitions(-std=c++11)
include_directories(include)
include_directories(lib)
file(GLOB_RECURSE SOURCE_FILES src/*.cpp)
find_package(Boost REQUIRED COMPONENTS date_time program_options)
include_directories(${Boost_INCLUDE_DIRS})
find_package(Threads REQUIRED)
add_executable(timer ${SOURCE_FILES})
target_link_libraries(timer ${Boost_LIBRARIES} Threads::Threads)
